# 3dcgtutorials

./: .gitignore  LICENSE  README.md
01_OsgInstancing/: CMakeLists.txt
01_OsgInstancing/shader/: instancing.frag  instancing.vert  no_instancing.frag  no_instancing.vert  texture_instancing.vert  ubo_instancing.frag  ubo_instancing.vert
01_OsgInstancing/src/: ASCFileLoader.cpp  ASCFileLoader.h  ComputeInstanceBoundingBoxCallback.cpp  ComputeInstanceBoundingBoxCallback.h  ComputeTextureBoundingBoxCallback.cpp  ComputeTextureBoundingBoxCallback.h  InstancedGeometryBuilder.cpp  InstancedGeometryBuilder.h  SwitchTechniqueHandler.h  main.cpp
02_OsgInstancing/: CMakeLists.txt
02_OsgInstancing/data/: crater.asc
02_OsgInstancing/shader/: attribute_instancing.frag  attribute_instancing.vert  instancing.vert  no_instancing.vert  texture_instancing.vert  ubo_instancing.vert
02_OsgInstancing/src/: ASCFileLoader.cpp  ComputeInstanceBoundingBoxCallback.cpp  ComputeInstanceBoundingBoxCallback.h  ComputeTextureBoundingBoxCallback.h  InstancedDrawable.cpp  InstancedDrawable.h  InstancedGeometryBuilder.cpp  InstancedGeometryBuilder.h  LightUniformUpdateCallback.h  MatrixUniformUpdateCallback.h  SwitchTechniqueHandler.h  main.cpp
03_ShadowMapping/: CMakeLists.txt
03_ShadowMapping/shader/: main_pass.frag  main_pass.vert  main_pass_untextured.frag  main_pass_untextured.vert  shadow_pass.frag  shadow_pass.vert
03_ShadowMapping/src/: main.cpp
04_PopBuffer/: CMakeLists.txt
04_PopBuffer/osgPop/: CMakeLists.txt  ConvertToLevelOfDetailGeometryVisitor.cpp  ConvertToLevelOfDetailGeometryVisitor.h  ConvertToPopGeometryVisitor.cpp  ConvertToPopGeometryVisitor.h  HalfEdge.h  LevelOfDetailDrawElements.cpp  LevelOfDetailDrawElements.h  LevelOfDetailGeometry.cpp  LevelOfDetailGeometry.h  PopDrawElements.cpp  PopDrawElements.h  PopGeometry.cpp  PopGeometry.h  Vec3ui.h
04_PopBuffer/serializer/: CMakeLists.txt  PopDrawElements.cpp  PopGeometry.cpp
04_PopBuffer/shader/: popbuffer.frag  popbuffer.vert
04_PopBuffer/src/: AddTextureUniformVisitor.h  DemoEventHandler.cpp  DemoEventHandler.h  KdTreeVisitor.cpp  KdTreeVisitor.h  UpdateViewSpaceErrorVisitor.h  main.cpp
05_Slicing/: CMakeLists.txt
05_Slicing/data/: run.bat
05_Slicing/shader/: dilate.frag  dilate.vert  imposter.frag  imposter.vert  simple.frag  simple.vert
05_Slicing/src/: main.cpp
